@@ -387,6 +387,7 @@ private:
 	DECLARE_DYNTRANS_INSTR(jmp_n_functioncalltrace);
 	DECLARE_DYNTRANS_INSTR(jmp_n_functioncalltrace_singlestep);
 	DECLARE_DYNTRANS_INSTR(ldcr);
+	DECLARE_DYNTRANS_INSTR(st);
 
 	void Translate(uint32_t iword, struct DyntransIC* ic);
 	DECLARE_DYNTRANS_INSTR(ToBeTranslated);
